Small screen size

--- a/OmniFood/index.html
+++ b/OmniFood/index.html
@@ -232,7 +232,7 @@
                     we’re nothing without our customers
                 </h2>
             </div>
-            <div class="container pt-5">
+            <div class="container pt-5 review">
                 <div class="row">
                     <div class="col-md-4">
                         <p>
