--- a/OmniFood/index.html
+++ b/OmniFood/index.html
@@ -286,7 +286,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-4 offset-2 mt-3 ">
+                    <div class="col-4 offset-md-2 mt-3 ">
                         <a href="https://www.facebook.com/">
                             <ion-icon name="logo-facebook" class="footericon"></ion-icon>
                         </a>
