--- a/OmniFood/index.html
+++ b/OmniFood/index.html
@@ -270,7 +270,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-4 offset-2 navbar-dark">
+                    <div class="col-4 offset-1 offset-md-2 navbar-dark">
                         <ul class="navbar-nav">
                             <li class="nav-item mt-3">
                                 <a href="#" class="nav-link">About</a>
